Adding View option to list friends and heading

--- a/EverlyHealth/EverlyHealth/Views/Member/Index.cshtml
+++ b/EverlyHealth/EverlyHealth/Views/Member/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Website)
+                @Html.DisplayNameFor(model => model.ShortenUrl)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Contacts)
@@ -39,7 +39,7 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Website)
+                    @Html.DisplayFor(modelItem => item.ShortenUrl)
                 </td>
                 <td>
                     @item.Contacts.Count
